--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple React Boilerplate",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -22,9 +23,18 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
+    "expect": "^1.14.0",
     "foundation-sites": "^6.2.3",
     "jquery": "^2.2.4",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-mocha": "^0.2.2",
+    "karma-mocha-reporter": "^2.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.7.0",
+    "mocha": "^2.4.5",
     "node-sass": "^3.7.0",
+    "react-addons-test-utils": "^15.3.2",
     "sass-loader": "^3.2.0",
     "script-loader": "^0.7.0",
     "style-loader": "^0.13.1",
