--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.11.1",
     "express": "^4.13.4",
+    "moment": "^2.15.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^2.4.1"
@@ -34,6 +35,7 @@
     "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
     "node-sass": "^3.7.0",
+    "node-uuid": "^1.4.7",
     "react-addons-test-utils": "^15.3.2",
     "sass-loader": "^3.2.0",
     "script-loader": "^0.7.0",
