--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "node-sass": "^3.7.0",
     "node-uuid": "^1.4.7",
     "react-addons-test-utils": "^15.3.2",
+    "redux": "^3.6.0",
     "sass-loader": "^3.2.0",
     "script-loader": "^0.7.0",
     "style-loader": "^0.13.1",
