--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
     "expect": "^1.14.0",
+    "firebase": "^3.4.1",
     "foundation-sites": "^6.2.3",
     "jquery": "^2.2.4",
     "karma": "^0.13.22",
@@ -39,6 +40,7 @@
     "react-addons-test-utils": "^15.3.2",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
     "sass-loader": "^3.2.0",
     "script-loader": "^0.7.0",
     "style-loader": "^0.13.1",
